# tech5challenge

./: .gitignore  DOCUMENTACAO_TECNICA.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
archive/legacy/outputs/outputs/: config_passos_magicos.joblib  insights_negocio.csv  metricas_limiares.csv  metricas_teste_temporal.csv  metricas_validacao_cruzada.csv  previsoes_base_completa.csv  previsoes_teste_temporal.csv  validacao_app_passos_magicos.xlsx
artifacts/analytics/: painel_analitico.json  resumo_analitico.md  storyboard.json
artifacts/model/: feature_importance.csv  metrics_holdout.csv  model_config.json  model_pipeline.joblib  predictions_holdout.csv  threshold_report.csv
data/interim/: base_analitica_preview.csv
data/processed/: base_analitica.parquet  base_modelagem_proximo_ano.parquet
data/raw/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx
notebooks/: 01_tratamento_e_bases_modelo.ipynb  02_painel_analitico.ipynb  03_executar_entrega_e_streamlit.ipynb  ambiente_notebook.py
pages/: 2_Painel_Analitico.py
passos_magicos/: __init__.py  __main__.py
passos_magicos_dt/: __init__.py
references/: Links adicionais da passos.docx  PEDE_ Pontos importantes.docx
src/: __init__.py
src/passos_magicos_dt/: __init__.py  analysis.py  app_support.py  cli.py  config.py  data.py  materials.py  modeling.py  painel_analitico_app.py  runtime.py
src/passos_magicos_dt/assets/: storyboard.json
support/: ppt-tech5.pptx
tests/: test_app.py  test_pipeline.py
