[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passos-magicos-analytics"
version = "1.0.0"
description = "Ferramenta analítica e preditiva para acompanhamento educacional da Passos Mágicos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37",
    "imageio-ffmpeg>=0.6",
    "joblib>=1.3",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "nbconvert>=7.17",
    "nbformat>=5.10",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pillow>=11.0",
    "pyarrow>=17.0",
    "python-pptx>=1.0",
    "scikit-learn>=1.6",
    "streamlit>=1.37",
    "xgboost>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
passos_magicos_dt = ["assets/*.json"]
